// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Toggle Checked smoke-test 1`] = `
<div class="flex items-center">
  <button type="button"
          role="switch"
          aria-checked="true"
          data-state="checked"
          value="on"
          class="p-0 h-32 w-[56px] bg-neutral-600 rounded-full relative inline-block transition-colors data-[disabled]:bg-gui-unavailable data-[disabled]:cursor-not-allowed data-[state=checked]:bg-orange-600 focus:outline-none focus-visible:outline-offset-0 focus-visible:outline-4 focus-visible:outline-gui-focus"
  >
    <span data-state="checked"
          class="block h-[28px] w-[28px] bg-white data-[disabled]:bg-neutral-500 rounded-full drop-shadow-toggle translate-x-2 data-[state=checked]:translate-x-[26px] transition-transform"
    >
    </span>
  </button>
</div>
`;

exports[`Components/Toggle Default smoke-test 1`] = `
<div class="flex items-center">
  <button type="button"
          role="switch"
          aria-checked="false"
          data-state="unchecked"
          value="on"
          class="p-0 h-32 w-[56px] bg-neutral-600 rounded-full relative inline-block transition-colors data-[disabled]:bg-gui-unavailable data-[disabled]:cursor-not-allowed data-[state=checked]:bg-orange-600 focus:outline-none focus-visible:outline-offset-0 focus-visible:outline-4 focus-visible:outline-gui-focus"
  >
    <span data-state="unchecked"
          class="block h-[28px] w-[28px] bg-white data-[disabled]:bg-neutral-500 rounded-full drop-shadow-toggle translate-x-2 data-[state=checked]:translate-x-[26px] transition-transform"
    >
    </span>
  </button>
</div>
`;

exports[`Components/Toggle Disabled smoke-test 1`] = `
<div class="flex items-center">
  <button type="button"
          role="switch"
          aria-checked="false"
          data-state="unchecked"
          data-disabled
          disabled
          value="on"
          class="p-0 h-32 w-[56px] bg-neutral-600 rounded-full relative inline-block transition-colors data-[disabled]:bg-gui-unavailable data-[disabled]:cursor-not-allowed data-[state=checked]:bg-orange-600 focus:outline-none focus-visible:outline-offset-0 focus-visible:outline-4 focus-visible:outline-gui-focus"
  >
    <span data-state="unchecked"
          data-disabled
          class="block h-[28px] w-[28px] bg-white data-[disabled]:bg-neutral-500 rounded-full drop-shadow-toggle translate-x-2 data-[state=checked]:translate-x-[26px] transition-transform"
    >
    </span>
  </button>
</div>
`;
